flux/apps/ai/tts/qwen3-tts/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-tts-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/audio
      timeouts:
        request: 900s
        backendRequest: 900s
      backendRefs:
        - kind: Service
          name: qwen3-tts
          port: 8091
